--- a/index.html
+++ b/index.html
@@ -28,13 +28,26 @@
             <form class="main-section-form">
                 <div class="state-city">
                     <label for="choose-state" class="main-section-label">Escolha seu estado</label>
-                    <input type="text" id="choose-state" name="choose-state" class="btn-choose" required placeholder="Digite seu estado aqui">
-                    <button type="button" class="btn-send-options">Enviar</button>
+                    <input type="text" id="choose-state" name="choose-state" class="btn-choose" required
+                    autocomplete="off"
+                        placeholder="Digite seu estado aqui">
+                    <button type="button" class="btn-send-options" disabled>Enviar</button>
                 </div>
 
-                <label for="choose-city" class="main-section-label hidden">Agora escolha sua cidade ou a mais
-                    proxima</label>
-                <input type="radio" id="choose-city" name="choose-city hidden" class="btn-choose hidden">
+                <p class="main-section-label hidden">Agora escolha sua cidade ou a mais
+                    proxima</p>
+
+                <div class="section-form-radio">
+
+                <!-- como deve ser feito no js
+                        <label for="choose-city1" class="main-section-form-state-label">cidade1
+                        <input type="radio" id="choose-city1" name="choose-city hidden" class="hidden"
+                            value="teste">
+                    </label>
+                -->
+
+
+                </div>
 
                 <button type="submit" class="CTA hidden">Confirmar</button>
             </form>
@@ -42,9 +55,9 @@
     </main>
 
     <footer class="footer-content">
-        <p class="linkedin">Acesse : <a href="#">linkedin</a></p>
-        <p class="gitHub">O projeto pode ser visto no <a href="#">GitHub</a></p>
-        <p> Feito com muito trabalho por : <a href="#">Lucas Samuel Pedrolo</a> </p>
+        <p class="linkedin">Acesse : <a href="#" target="_blank">linkedin</a></p>
+        <p class="gitHub">O projeto pode ser visto no <a href="#" target="_blank">GitHub</a></p>
+        <p> Feito com muito trabalho por : <a href="#" target="_blank"><span class="span-name-creator">Lucas Samuel Pedrolo</span></a> </p>
     </footer>
 
 </body>
