Adicionando mais funcionalidades ao js

--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@
     <footer class="footer-content">
         <p class="linkedin">Acesse : <a href="#" target="_blank">linkedin</a></p>
         <p class="gitHub">O projeto pode ser visto no <a href="#" target="_blank">GitHub</a></p>
-        <p> Feito com muito trabalho por : <a href="#" target="_blank"><span class="span-name-creator">Lucas Samuel Pedrolo</span></a> </p>
+        <p class="name-dev"> Feito com muito trabalho por : <a href="#" target="_blank">Lucas Samuel Pedrolo</a></p>
     </footer>
+
+    <script src="./script.js"></script>
 
 </body>
 
