--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,900;0,1000;1,300&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Veja o clima de sua cidade!</title>
 </head>
 
@@ -29,7 +29,7 @@
                 <label for="city" class="case-options-label-city">Digite sua cidade :</label>
                 <input type="text" id="city" class="case-options-input-city" placeholder="Ex: PR ou parana" required autocomplete="off">
 
-                <button class="btn-send">Enviar</button>
+                <button class="btn-send disabled">Enviar</button>
             </div>
         </section>
     </main>
@@ -40,7 +40,7 @@
         <p class="name-dev"> Feito com muito trabalho por : <a href="#" target="_blank">Lucas Samuel Pedrolo</a></p>
     </footer>
 
-    <script src="./script.js"></script>
+    <script src="./javascript/script.js"></script>
 
 </body>
 
