--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <label for="city" class="case-options-label-city">Digite sua cidade :</label>
                 <input type="text" id="city" class="case-options-input-city" placeholder="Ex: PR ou parana" required autocomplete="off">
 
-                <button class="btn-send disabled">Enviar</button>
+                <button class="btn-send disabled" disabled>Enviar</button>
             </div>
         </section>
     </main>
