adicionando conexao com api

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <section class="main-section">
             <div class="main-section-case-options">
                 <label for="city" class="case-options-label-city">Digite sua cidade :</label>
-                <input type="text" id="city" class="case-options-input-city" placeholder="Ex: PR ou parana" required autocomplete="off">
+                <input type="text" id="city" class="case-options-input-city" placeholder="Ex: PR" autocomplete="off">
 
                 <button class="btn-send disabled" disabled>Enviar</button>
             </div>
