retirando funcao async

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <button type="button" class="btn-send disabled" disabled>Enviar</button>
             </div>
 
-            <div class="main-section-case-options">
+            <div class="main-section-case-options hidden" id="main-city">
                 <label class="case-options-label" for="search-city">Agora sua cidade</label>
 
                 <input type="text" list="all-city" id="search-city" class="case-options-input"
@@ -41,7 +41,7 @@
 
                 </datalist>
 
-                <button type="button" class="btn-send disabled-city" disabled>Confirmar pesquisa</button>
+                <button type="button" class="btn-send disabled-city" id="btn-send-city" disabled>Confirmar pesquisa</button>
 
             </div>
         </section>
