--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     </header>
 
     <main>
+        <div class="loading">esperando resposta do servidor</div>
         <section class="main-section">
             <div class="main-section-case-options" id="main-state">
                 <label for="state" class="case-options-label">Digite seu estado :</label>
